Overlapping Issue Fixed

--- a/content/demo.css
+++ b/content/demo.css
@@ -13,13 +13,6 @@
   }
 }
 
-@media screen and (min-width: 700px) {
-  .bricklayer-column-sizer {
-    /* If page is greater than 700px, columns will be 5% wide. That means there will be lots of columns */
-    width: 50%;
-  }
-}
-
 .bricklayer {
   margin: 10px 5px;
 }
